--- a/src/Pages/Contactanos/Contactanos.css
+++ b/src/Pages/Contactanos/Contactanos.css
@@ -32,9 +32,10 @@
   padding: 40px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 500px;  /* Aumentar el tamaño máximo del formulario */
+  max-width: 500px;
   width: 100%;
   text-align: center;
+  position: relative;  /* Necesario para que el botón "Enviar" se posicione bien */
 }
 
 h2 {
@@ -44,17 +45,22 @@ h2 {
 }
 
 .contact-form .ant-form-item {
-  margin-bottom: 20px;  /* Aumentar el espacio entre los elementos del formulario */
+  margin-bottom: 20px; 
+}
+
+.button-container {
+  margin-top: 20px; 
+  text-align: right; 
 }
 
 .send-button {
-  width: 100%;
-  background-color: #1890ff;
+  width: auto;
+  padding: 8px 20px;
+  font-size: 1rem;
+  background-color: #009f20;
   border: none;
-  padding: 10px;
-  font-size: 1.1rem;
 }
 
 .send-button:hover {
-  background-color: #40a9ff;
+  background-color: #009f20;
 }
